Sat Sep  6 09:48:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (join): New tests join-25 through join-29 test merging
	from one branch to a different branch.

	* release.c: In comment about CVSROOTADM_IGNORE, also mention
	comment just added to entries.c.
	* entries.c: Expand this comment, especially the part about
	CVS/Template.

	Keep track of what revisions CVS/Base correspond to:
	* cvs.h (CVSADM_BASEREV, CVSADM_BASEREVTMP): Added.
	* entries.c, cvs.h (base_register, base_deregister, base_get,
	base_walk): New functions.
	* edit.c (edit_fileproc): Call base_register when setting up CVS/Base.
	(unedit_fileproc): When taking a file out of CVS/Base, put its
	revision back into entries, and base_deregister it.
	* sanity.sh (watch4): New tests watch4-10 through watch4-18 test
	for above fix.

Fri Sep  5 09:14:10 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* client.c: Only declare start_rsh_server if we are going to
	define it (!NO_EXT_METHOD).

	* subr.c, cvs.h (check_numeric): New function.
	* admin.c (admin): Call it.
	* sanity.sh (admin): New tests admin-10a and admin-10b test for fix.

Thu Sep  4 15:55:39 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* sanity.sh (binwrap2): New tests, test for the ability to specify
	all files are binary except certain patterns.

	* sanity.sh (modules3): New tests modules3-16 and modules3-17 test
	for another behavior involving '/' in a module name.

Sun Aug 31 12:03:15 1997  Jim Kingdon  <kingdon@harvey.cyclic.com>

	* add.c (add): Remove checks for '/' in pathnames.
	(add): Move code which handles entries and repository inside loop,
	since these now might be different for each argument.  Add code to
	set finfo.update_dir, finfo.file, and finfo.fullname appropriately
	even if pathname contains '/'.  Replace user variable with
	finfo.file or finfo.fullname, depending on which is meant.  chdir
	into update_dir for each argument.  Likewise for the client code
	which creates directories.